# mo_ecat_core

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  主站功能流程.md  主站状态设计方案.md  主站状态设计方案的评审意见.md  使用文档.md  当前任务.md  当前问题.md  指令说明文档.md  架构说明文档.md  状态机说明文档.md  状态机重构文档.md
docs/: RA8 EtherCAT.xml
docs/design/: 核心库与Qt_GUI分离设计.md
docs/note/: 287号帧.md  DC同步.md  Datagram_ESC解析流程.md  EEPROM.md  ESI文件规则.md  ETherCAT帧.md  EtherCAT_SPE.md  EtherCAT从站开发.md  EtherCAT流程.md  FMMU说明.md  ethercat.md  上电扫描.md  广播读写.md  逻辑读写.md  邮箱配置.md
docs/others/: 主站状态设计方案.md  使用文档.md  当前问题.md  指令说明文档.md  状态机说明文档.md
docs/planning/: EtherCAT主站功能规划.md  主站状态机分层演化方案.md  主站状态机分层演化方案_评审意见.md  人形机器人 EtherCAT 主站状态机实现框架.md  人形机器人 EtherCAT 主站运行流程设计.md  人形机器人主站安全与故障策略.md  人形机器人实时控制接口规范.md
docs/question/: 2026-06-17_SOEM读取从站名称为GroupName而非DeviceName.md
examples/: build.sh
examples/cli/: CMakeLists.txt  cli_logger.h  ecat_application.cpp  ecat_application.h  main.cpp  stdin_command_reader.cpp  stdin_command_reader.h
examples/tool/python/: esi_to_sii_bin.py
include/mo_ecat/: config.h  types.h
src/: main.cpp
src/activity/: activity.h  activity_scheduler.cpp  activity_scheduler.h  pdo_mapping_activity.cpp  pdo_mapping_activity.h  sdo_diagnostics_activity.cpp  sdo_diagnostics_activity.h  sdo_parameter_activity.cpp  sdo_parameter_activity.h  state_inspection_activity.cpp  state_inspection_activity.h
src/app/: command_reader.h  ecat_application.cpp  ecat_application.h  stdin_command_reader.cpp
src/core/: mo_ecat_master.cpp  runtime_state.cpp
src/cyclic/: cyclic_runner.cpp  cyclic_runner.h  process_data_engine.cpp  process_data_engine.h
src/ec_controller/: ec_controller.cpp  ec_controller.h
src/ec_master/: ec_controller.cpp  ec_controller.h  ec_master.cpp  ec_master.h
src/examples/: pdo_test.cpp
src/servo_axis/: joint_manager.cpp  joint_manager.h  servo_axis.cpp  servo_axis.h
src/servo_node/: servo_node.cpp  servo_node.h  servo_node_manager.cpp  servo_node_manager.h
src/slave_node/: device_profile.cpp  device_profile.h  slave_config_factory.cpp  slave_config_factory.h  slave_node.cpp  slave_node.h  slave_node_manager.cpp  slave_node_manager.h  slave_node_types.h  slave_type_detector.cpp  slave_type_detector.h
src/utils/: logger.cpp  logger.h  signal_handler.cpp  signal_handler.h
tool/: parse_eeprom.py
